@@ -3,6 +3,10 @@
 	* feature: some changes to have compatibility with intel c compiler
 	(tested with v9.0.025)
 	* feature: initial support to change passwords with different methods
+	* feature: added UPGRADING file for postgresql
+	* feature: mysql and pgsql backends now use authentication lib
+	* feature: mysql backend use a channel for logging
+	* bugfix: userpass field too small in sql backends
 	* bugfix: fixed errors in sha and pam authentication
 
 2005-08-23  Pierre Chifflier  <pollux@wzdftpd.net>
